* 2007-12-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10559 setDefaultSenderAddress does not work in changeUser
  - Bugfix ID#10501 context delete brakes replication

* 2007-11-12 - dennis.sieben@open-xchange.com

  - Bugfix ID#10049 L3: display name of contact blocks creation of new user
  - Bugfix ID#10118 No rollback if filestore creation fails during createuser

* 2007-11-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10050 Database leftovers of deleted contexts
  
* 2007-10-29 - manuel.kraft@open-xchange.com
 
  - Bugfix ID#9983 Changing user by name isn't running any more

* 2007-10-23 - dennis.sieben@open-xchange.com

  - Bugfix ID#9620 RMI Api documentation lacks proper language handling description

* 2007-10-18 - manuel.kraft@open-xchange.com
 
  - Bugfix ID#9800 Unable to delete Contact: Context 30 Contact 2 on delete context
  - Bugfix ID#9857 Not closed SQL Statement when deleting user
  - Bugfix ID#9662 [L3] username can't be changed

* 2007-10-12 - dennis.sieben@open-xchange.com
 
  - Bugfix ID#9786 L3: IMAP port is stripped from commandline
 
* 2007-10-11 - dennis.sieben@open-xchange.com
 
  - Bugfix ID#9777 no adequate description of parameters
 
* 2007-10-10 - choeger@open-xchange.com

 - Bugfix ID#9767 [L3] changing admin password with disabled authentication does not work

* 2007-10-08 - manuel.kraft@open-xchange.com

 - Bugfix ID#9616 Deleted users are not removed from Global Addressbook in Outlook

* 2007-09-26 - choeger@open-xchange.com

  - Bugfix ID#9582 osgi/config.ini does not exist on upgrading the
  open-xchange-admin

* 2007-09-20 - dennis.sieben@open-xchange.com

  - Bugfix ID#9592 Language is not in the output of listuser --csv CLT
  
* 2007-09-11 - dennis.sieben@open-xchange.com

  - Bugfix ID#9362 <addmembers> should be <userid>
  
* 2007-09-07 - choeger@open-xchange.com

 - Bugfix #9235 Crypt implementation should be able to handle UTF-8

* 2007-09-05 - dennis.sieben@open-xchange.com
